--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,9 +22,9 @@
 </head>
 <body>
 
-<div class="container text-center mt-4" style="min-width: 300px; max-width: 770px; height: auto;">
+<div class="container text-center mt-4" style="min-width: 300px; max-width: 1080px; height: auto;">
     <div class="alert alert-primary" role="alert">
-        <a class="h2 alert-heading" href="{{ url_for("index") }}">WebBoggle</a>
+        <a class="h2 alert-heading" href="{{ url_for("routes.index") }}">WebBoggle</a>
         <hr>
         <p class="mb-0">Generate boggle boards and share them with your friends so that you can play remotely!</p>
     </div>
@@ -34,7 +34,7 @@
 
 </div>
 
-<p class="w-100 text-center" style="bottom: 0; height: 25px;">Copyright <a href="https://github.com/CouchMaster789/WebBoggle">WebBoggle</a> 2020 &copy; <a href="https://github.com/CouchMaster789">Daniel Samet</a></p>
+<p class="w-100 text-center" style="bottom: 0; height: 25px;">Copyright <a href="https://github.com/shmuli9/WebBoggle">WebBoggle</a> 2020 &copy; <a href="https://github.com/shmuli9">Shmuel Margulies</a></p>
 
 {% block extra_scripts %}{% endblock extra_scripts %}
 
